# RuPi

./: Cargo.toml  README.md
src/: algorithms.rs  cli.yml  lib.rs  main.rs  pi.rs
src/algorithms/: midpoint.rs  simple.rs
