[package]
name = "rupi"
version = "0.1.0"
authors = ["david"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
#constellation-rs = "0.1"
num = "0.3.0"
rand = "0.7.3"
rayon = "1.1"
